--- a/index.html
+++ b/index.html
@@ -5,9 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/custom.css" />
+    <!-- Iconos Bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap-icons.css" />
     <title>Moda Store</title>
   </head>
   <body>
+    <header>
+      <nav
+        class="navbar navbar-expand-lg bg-light fixed-top top-0 start-0 w-100"
+      >
+        <div class="container">
+          <a class="navbar-brand d-lg-none" href="#">Moda Store</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse p-2 flex-column" id="navbar">
+            <div
+              class="d-flex justify-content-center justify-content-lg-between flex-column p-2 flex-lg-row w-100"
+            >
+              <form class="d-flex" role="search">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Buscar"
+                />
+                <button class="btn btn-outline-dark" type="submit">
+                  <i class="bi bi-search"></i>
+                </button>
+              </form>
+              <a class="navbar-brand d-none d-lg-block" href="#">Moda Store</a>
+              <ul class="navbar-nav">
+                <li class="nav-item d-flex align-items-center">
+                  <a class="nav-link mx-2" href="#">
+                    <i class="bi bi-person-fill"></i> Mi cuenta
+                  </a>
+                </li>
+                <li class="nav-item d-flex align-items-center">
+                  <a class="nav-link mx-2" href="#">
+                    <i class="bi bi-bag-fill"></i>
+                    Bolsa
+                  </a>
+                  <span class="badge rounded-pill bg-secondary"> 0 </span>
+                </li>
+              </ul>
+            </div>
+            <div class="d-block w-100">
+              <ul
+                class="navbar-nav d-flex justify-content-center align-items-center pt-3"
+              >
+                <li class="nav-item mx-2">
+                  <a href="#" class="nav-link"> Ropa </a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a href="#" class="nav-link"> Calzados </a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a href="#" class="nav-link"> Accesorios </a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a href="#" class="nav-link"> Sobre Nosotros </a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a href="#" class="nav-link"> Blog </a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a href="#" class="nav-link"> Contacto </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- Script de Bootstrap -->
     <script src="js/bootstrap.js"></script>
   </body>
