--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
                 class="navbar-nav d-flex justify-content-center align-items-center pt-3"
               >
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link"> Ropa </a>
+                  <a href="#" class="nav-link">Ropa</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link"> Calzados </a>
+                  <a href="#" class="nav-link">Calzados</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link"> Accesorios </a>
+                  <a href="#" class="nav-link">Accesorios</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link"> Sobre Nosotros </a>
+                  <a href="#" class="nav-link">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link"> Blog </a>
+                  <a href="#" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link"> Contacto </a>
+                  <a href="#" class="nav-link">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -82,6 +82,229 @@
         </div>
       </nav>
     </header>
+    <div class="container position-relative text-center">
+      <div class="position-relative text-center text-white mb-5">
+        <img src="imgs/banner.jpg" class="w-100" alt="Banner" />
+        <div
+          class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
+        >
+          <h1 class="display-4">Colección Verano 2023</h1>
+          <a href="#nuevo" class="btn btn-light">Ver Nuevos Ingresos</a>
+        </div>
+      </div>
+      <h2 class="display-6 py-5">Más Populares</h2>
+      <div
+        class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5"
+        id="nuevo"
+      >
+        <div class="card m-2" style="width: 18rem">
+          <a href="paginas/producto.html">
+            <img
+              src="imgs/ropa/img1.jpg"
+              alt=""
+              class="card-img-top"
+              height="300"
+              alt="Producto"
+            />
+          </a>
+          <div class="card-body">
+            <p class="card-text fw-bold">Vestido Azul</p>
+            <small class="text-secondary"> ARS $2500 </small>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem">
+          <a href="paginas/producto.html">
+            <img
+              src="imgs/ropa/img2.jpg"
+              alt=""
+              class="card-img-top"
+              height="300"
+              alt="Producto"
+            />
+          </a>
+          <div class="card-body">
+            <p class="card-text fw-bold">Remera Lisa</p>
+            <small class="text-secondary"> ARS $1000 </small>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem">
+          <a href="paginas/producto.html">
+            <img
+              src="imgs/ropa/img3.jpg"
+              alt=""
+              class="card-img-top"
+              height="300"
+              alt="Producto"
+            />
+          </a>
+          <div class="card-body">
+            <p class="card-text fw-bold">Abrigo Celeste</p>
+            <small class="text-secondary"> ARS $3000 </small>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem">
+          <a href="paginas/producto.html">
+            <img
+              src="imgs/ropa/img4.jpg"
+              alt=""
+              class="card-img-top"
+              height="300"
+              alt="Producto"
+            />
+          </a>
+          <div class="card-body">
+            <p class="card-text fw-bold">Abrigo Elegante</p>
+            <small class="text-secondary"> ARS $3500 </small>
+          </div>
+        </div>
+      </div>
+      <a href="paginas/listaDeProductos.html" class="btn btn-outline-dark my-5">
+        Ver Todos los Productos
+      </a>
+      <div
+        class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5"
+      >
+        <div class="position-relative m-2">
+          <img src="imgs/menu/img1.jpg" height="300" alt="Ropa Informal" />
+          <a
+            href="#"
+            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
+            >Ropa Informal</a
+          >
+        </div>
+        <div class="position-relative m-2">
+          <img src="imgs/menu/img2.jpg" height="300" alt="Ropa Informal" />
+          <a
+            href="#"
+            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
+            >Camisas</a
+          >
+        </div>
+        <div class="position-relative m-2">
+          <img src="imgs/menu/img3.jpg" height="300" alt="Ropa Informal" />
+          <a
+            href="#"
+            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
+            >Carteras</a
+          >
+        </div>
+      </div>
+      <div class="row text-start align-items-center gy-5 my-5">
+        <div class="col-12 col-md-6">
+          <img src="imgs/sobre/img1.jpg" alt="" class="w-100 h-100" />
+        </div>
+        <div class="col-12 col-md-6">
+          <div>
+            <h2 class="display-4">Las Mejores Marcas</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Architecto aspernatur atque exercitationem iusto ad repudiandae
+              iure asperiores dicta. Sunt quo dolorem doloremque, saepe
+              molestiae quasi quos, reiciendis nemo maxime, dolore eos eum
+              assumenda aliquam distinctio natus laudantium magni ex sapiente.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row text-start align-items-center gy-5 my-5">
+        <div class="col-12 col-md-6">
+          <div>
+            <h2 class="display-4">Calidad</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Architecto aspernatur atque exercitationem iusto ad repudiandae
+              iure asperiores dicta. Sunt quo dolorem doloremque, saepe
+              molestiae quasi quos, reiciendis nemo maxime, dolore eos eum
+              assumenda aliquam distinctio natus laudantium magni ex sapiente.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <img src="imgs/sobre/img2.jpg" alt="" class="w-100 h-100" />
+        </div>
+      </div>
+      <section class="my-5 mx-auto py-5" style="max-width: 25rem">
+        <h2>¡Suscribite a nuestro newsletter!</h2>
+        <form action="" class="d-flex my-4">
+          <input
+            type="search"
+            class="form-control me-2"
+            placeholder="Tu correo electrónico"
+          />
+          <button type="submit" class="btn btn-outline-dark">
+            Suscribirse
+          </button>
+        </form>
+      </section>
+      <footer class="d-flex justify-content-between my-5 text-start flex-wrap">
+        <ul class="nav flex-column">
+          <li class="fw-bold nav-item">
+            <a href="" class="nav-link text-dark">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Ropa</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Calzados</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Accesorios</a>
+          </li>
+        </ul>
+        <ul class="nav flex-column">
+          <li class="fw-bold nav-item">
+            <a href="" class="nav-link text-dark">Ayuda</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Como comprar</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Plazos de entrega</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Atención al cliente</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Promociones Bancarias</a>
+          </li>
+        </ul>
+        <ul class="nav flex-column">
+          <li class="fw-bold nav-item">
+            <a href="" class="nav-link text-dark">Empresa</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Sobre Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Vendé con nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Institucional</a>
+          </li>
+        </ul>
+        <ul class="nav flex-column">
+          <li class="fw-bold nav-item">
+            <a href="" class="nav-link text-dark">Términos y Condiciones</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Aviso legal</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Cambios y devoluciones</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Política de Privacidad</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-muted">Política de Cookies</a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+
     <!-- Script de Bootstrap -->
     <script src="js/bootstrap.js"></script>
   </body>
