edicion colores de inputs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap-icons.css" />
     <title>Moda Store</title>
   </head>
-  <body>
+  <body class="pt-5">
     <header>
       <nav
         class="navbar navbar-expand-lg bg-light fixed-top top-0 start-0 w-100"
