--- a/paginas/listaDeProductos.html
+++ b/paginas/listaDeProductos.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
     <title>Moda Store</title>
   </head>
-  <body class="pt-5">
+  <body>
     <header>
       <nav
         class="navbar navbar-expand-lg bg-light fixed-top top-0 start-0 w-100"
       >
         <div class="container">
-          <a class="navbar-brand d-lg-none" href="#">Moda Store</a>
+          <a class="navbar-brand d-lg-none" href="/">Moda Store</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,7 +38,7 @@
                   <i class="bi bi-search"></i>
                 </button>
               </form>
-              <a class="navbar-brand d-none d-lg-block" href="#">Moda Store</a>
+              <a class="navbar-brand d-none d-lg-block" href="/">Moda Store</a>
               <ul class="navbar-nav">
                 <li class="nav-item d-flex align-items-center">
                   <a class="nav-link mx-2" href="#">
@@ -345,6 +345,6 @@
     </div>
 
     <!-- Script de Bootstrap -->
-    <script src="js/bootstrap.js"></script>
+    <script src="../js/bootstrap.js"></script>
   </body>
 </html>
