--- a/paginas/producto.html
+++ b/paginas/producto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="../css/custom.css" />
     <!-- Iconos Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap-icons.css" />
+    <link rel="stylesheet" href="../css/bootstrap-icons.css" />
     <title>Moda Store</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
         class="navbar navbar-expand-lg bg-light fixed-top top-0 start-0 w-100"
       >
         <div class="container">
-          <a class="navbar-brand d-lg-none" href="#">Moda Store</a>
+          <a class="navbar-brand d-lg-none" href="/">Moda Store</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,7 +38,7 @@
                   <i class="bi bi-search"></i>
                 </button>
               </form>
-              <a class="navbar-brand d-none d-lg-block" href="#">Moda Store</a>
+              <a class="navbar-brand d-none d-lg-block" href="/">Moda Store</a>
               <ul class="navbar-nav">
                 <li class="nav-item d-flex align-items-center">
                   <a class="nav-link mx-2" href="#">
@@ -82,29 +82,170 @@
         </div>
       </nav>
     </header>
-    <div class="container position-relative text-center">
-      <div class="position-relative text-center text-white mb-5">
-        <img src="imgs/banner.jpg" class="w-100" alt="Banner" />
-        <div
-          class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
-        >
-          <h1 class="display-4">Colección Verano 2023</h1>
-          <a href="#nuevo" class="btn btn-light">Ver Nuevos Ingresos</a>
+    <div class="container">
+      <div class="row py-5 g-5">
+        <div class="col-12 col-lg-6">
+          <img
+            src="../imgs/ropa/img4.jpg"
+            class="m-1 w-100 sliderImagenPrincipal"
+            data-bs-toggle="modal"
+            data-bs-target="#imageModal"
+            alt="Producto"
+          />
+          <div>
+            <img
+              src="../imgs/ropa/img4.jpg"
+              width="60"
+              class="m-1 sliderMiniatura"
+              alt="Producto"
+            />
+            <img
+              src="../imgs/ropa/img4.jpg"
+              width="60"
+              class="m-1 sliderMiniatura"
+              alt="Producto"
+            />
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <h2 id="nombreProducto">Abrigo Elegante</h2>
+          <small class="text-muted">Articulo: 00001</small>
+          <h4 class="my-4">
+            ARS <span id="precio">3500</span>
+            $
+          </h4>
+          <label for="talle" class="text-muted">Talle:</label>
+          <select name="talle" id="talle" class="form-select">
+            <option selected>S</option>
+            <option value="1">M</option>
+            <option value="2">L</option>
+            <option value="3">XL</option>
+          </select>
+          <div class="d-grid my-4">
+            <button type="button" class="btn btn-lg btn-dark" id="bolsaBtn">
+              Agregar a Bolsa
+            </button>
+          </div>
+          <div class="accordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  <strong>Descripcion</strong>
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+              >
+                <div class="accordion-body">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Quis, qui atque magnam laudantium voluptatem nostrum quos cum
+                  possimus? Perferendis quis quo mollitia adipisci voluptatum
+                  libero rem temporibus velit maiores illum.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  <strong> Stock </strong>
+                </button>
+              </h2>
+              <div
+                class="accordion-collapse collapse"
+                id="collapseTwo"
+                aria-labelledby="headingTwo"
+              >
+                <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Laborum eius cupiditate eum voluptatum. Dolore culpa cum totam
+                  sapiente quas laboriosam officia et illum nemo natus.
+                  <br />
+                  <br />
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dignissimos quis perferendis velit officiis tempora pariatur!
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree"
+                >
+                  <strong>Información de Envio</strong>
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+              >
+                <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                  commodi rem maxime optio consequatur. Nemo?
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button
+                  class="accordion-button collapse"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour"
+                >
+                  <strong>Talles</strong>
+                </button>
+              </h2>
+              <div
+                id="collapseFour"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingFour"
+              >
+                <div class="accordion-body">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis aut enim soluta est numquam dolore architecto
+                  voluptate, veritatis officia unde id necessitatibus vero
+                  reiciendis illo optio molestiae ratione quisquam sint.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <h2 class="display-6 py-5">Más Populares</h2>
+      <h2 class="display-6 py-5 text-center">Vea Tambien</h2>
       <div
-        class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5"
-        id="nuevo"
+        class="d-flex justify-content-between align-items-center flex-column flex-lg-row"
       >
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
+        <div class="card m-2">
+          <a href="">
             <img
-              src="imgs/ropa/img1.jpg"
-              alt=""
+              src="../imgs/ropa/img1.jpg"
+              alt="Producto"
               class="card-img-top"
               height="300"
-              alt="Producto"
             />
           </a>
           <div class="card-body">
@@ -112,14 +253,13 @@
             <small class="text-secondary"> ARS $2500 </small>
           </div>
         </div>
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
+        <div class="card m-2">
+          <a href="">
             <img
-              src="imgs/ropa/img2.jpg"
-              alt=""
+              src="../imgs/ropa/img2.jpg"
+              alt="Producto"
               class="card-img-top"
               height="300"
-              alt="Producto"
             />
           </a>
           <div class="card-body">
@@ -127,14 +267,13 @@
             <small class="text-secondary"> ARS $1000 </small>
           </div>
         </div>
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
+        <div class="card m-2">
+          <a href="">
             <img
-              src="imgs/ropa/img3.jpg"
-              alt=""
+              src="../imgs/ropa/img3.jpg"
+              alt="Producto"
               class="card-img-top"
               height="300"
-              alt="Producto"
             />
           </a>
           <div class="card-body">
@@ -142,14 +281,13 @@
             <small class="text-secondary"> ARS $3000 </small>
           </div>
         </div>
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
+        <div class="card m-2">
+          <a href="">
             <img
-              src="imgs/ropa/img4.jpg"
-              alt=""
+              src="../imgs/ropa/img4.jpg"
+              alt="Producto"
               class="card-img-top"
               height="300"
-              alt="Producto"
             />
           </a>
           <div class="card-body">
@@ -158,71 +296,7 @@
           </div>
         </div>
       </div>
-      <a href="paginas/listaDeProductos.html" class="btn btn-outline-dark my-5">
-        Ver Todos los Productos
-      </a>
-      <div
-        class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5"
-      >
-        <div class="position-relative m-2">
-          <img src="imgs/menu/img1.jpg" height="300" alt="Ropa Informal" />
-          <a
-            href="#"
-            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
-            >Ropa Informal</a
-          >
-        </div>
-        <div class="position-relative m-2">
-          <img src="imgs/menu/img2.jpg" height="300" alt="Ropa Informal" />
-          <a
-            href="#"
-            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
-            >Camisas</a
-          >
-        </div>
-        <div class="position-relative m-2">
-          <img src="imgs/menu/img3.jpg" height="300" alt="Ropa Informal" />
-          <a
-            href="#"
-            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
-            >Carteras</a
-          >
-        </div>
-      </div>
-      <div class="row text-start align-items-center gy-5 my-5">
-        <div class="col-12 col-md-6">
-          <img src="imgs/sobre/img1.jpg" alt="" class="w-100 h-100" />
-        </div>
-        <div class="col-12 col-md-6">
-          <div>
-            <h2 class="display-4">Las Mejores Marcas</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto aspernatur atque exercitationem iusto ad repudiandae
-              iure asperiores dicta. Sunt quo dolorem doloremque, saepe
-              molestiae quasi quos, reiciendis nemo maxime, dolore eos eum
-              assumenda aliquam distinctio natus laudantium magni ex sapiente.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="row text-start align-items-center gy-5 my-5">
-        <div class="col-12 col-md-6">
-          <div>
-            <h2 class="display-4">Calidad</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto aspernatur atque exercitationem iusto ad repudiandae
-              iure asperiores dicta. Sunt quo dolorem doloremque, saepe
-              molestiae quasi quos, reiciendis nemo maxime, dolore eos eum
-              assumenda aliquam distinctio natus laudantium magni ex sapiente.
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6">
-          <img src="imgs/sobre/img2.jpg" alt="" class="w-100 h-100" />
-        </div>
-      </div>
+      <!-- Seccion newsletter -->
       <section class="my-5 mx-auto py-5" style="max-width: 25rem">
         <h2>¡Suscribite a nuestro newsletter!</h2>
         <form action="" class="d-flex my-4">
@@ -306,6 +380,6 @@
     </div>
 
     <!-- Script de Bootstrap -->
-    <script src="js/bootstrap.js"></script>
+    <script src="../js/bootstrap.js"></script>
   </body>
 </html>
