--- a/paginas/listaDeProductos.html
+++ b/paginas/listaDeProductos.html
@@ -15,7 +15,7 @@
         class="navbar navbar-expand-lg bg-light fixed-top top-0 start-0 w-100"
       >
         <div class="container">
-          <a class="navbar-brand d-lg-none" href="/">Moda Store</a>
+          <a class="navbar-brand d-lg-none" href="../index.html">Moda Store</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,7 +38,9 @@
                   <i class="bi bi-search"></i>
                 </button>
               </form>
-              <a class="navbar-brand d-none d-lg-block" href="/">Moda Store</a>
+              <a class="navbar-brand d-none d-lg-block" href="../index.html"
+                >Moda Store</a
+              >
               <ul class="navbar-nav">
                 <li class="nav-item d-flex align-items-center">
                   <a class="nav-link mx-2" href="#">
