creacion pagina blog

--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="../css/custom.css" />
     <!-- Iconos Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap-icons.css" />
-    <title>Moda Store</title>
+    <link rel="stylesheet" href="../css/bootstrap-icons.css" />
+    <title>Moda Store | Blog</title>
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
         class="navbar navbar-expand-lg bg-light fixed-top top-0 start-0 w-100"
       >
         <div class="container">
-          <a class="navbar-brand d-lg-none" href="#">Moda Store</a>
+          <a class="navbar-brand d-lg-none" href="../index.html">Moda Store</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,7 +38,9 @@
                   <i class="bi bi-search"></i>
                 </button>
               </form>
-              <a class="navbar-brand d-none d-lg-block" href="#">Moda Store</a>
+              <a class="navbar-brand d-none d-lg-block" href="../index.html"
+                >Moda Store</a
+              >
               <ul class="navbar-nav">
                 <li class="nav-item d-flex align-items-center">
                   <a class="nav-link mx-2" href="#">
@@ -71,7 +73,7 @@
                   <a href="#" class="nav-link">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="paginas/blog.html" class="nav-link">Blog</a>
+                  <a href="#" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="#" class="nav-link">Contacto</a>
@@ -82,147 +84,128 @@
         </div>
       </nav>
     </header>
-    <div class="container position-relative text-center">
-      <div class="position-relative text-center text-white mb-5">
-        <img src="imgs/banner.jpg" class="w-100" alt="Banner" />
-        <div
-          class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
-        >
-          <h1 class="display-4">Colección Verano 2023</h1>
-          <a href="#nuevo" class="btn btn-light">Ver Nuevos Ingresos</a>
-        </div>
+    <div class="container">
+      <div class="text-center my-5">
+        <h1>Blog</h1>
+        <hr />
       </div>
-      <h2 class="display-6 py-5">Más Populares</h2>
-      <div
-        class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5"
-        id="nuevo"
-      >
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
-            <img
-              src="imgs/ropa/img1.jpg"
-              alt=""
-              class="card-img-top"
-              height="300"
-              alt="Producto"
-            />
-          </a>
-          <div class="card-body">
-            <p class="card-text fw-bold">Vestido Azul</p>
-            <small class="text-secondary"> ARS $2500 </small>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card mb-5 shadow-sm">
+            <img src="../imgs/blog/img1.jpg" alt="" class="img-fluid" />
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+              </div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Magnam, eos deserunt officia totam similique obcaecati et odio
+                  voluptates distinctio, consequuntur delectus harum explicabo
+                  laborum illum minima porro expedita tempore dolor...
+                </p>
+              </div>
+              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+            </div>
           </div>
         </div>
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
-            <img
-              src="imgs/ropa/img2.jpg"
-              alt=""
-              class="card-img-top"
-              height="300"
-              alt="Producto"
-            />
-          </a>
-          <div class="card-body">
-            <p class="card-text fw-bold">Remera Lisa</p>
-            <small class="text-secondary"> ARS $1000 </small>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card mb-5 shadow-sm">
+            <img src="../imgs/blog/img2.jpg" alt="" class="img-fluid" />
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+              </div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Magnam, eos deserunt officia totam similique obcaecati et odio
+                  voluptates distinctio, consequuntur delectus harum explicabo
+                  laborum illum minima porro expedita tempore dolor...
+                </p>
+              </div>
+              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+            </div>
           </div>
         </div>
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
-            <img
-              src="imgs/ropa/img3.jpg"
-              alt=""
-              class="card-img-top"
-              height="300"
-              alt="Producto"
-            />
-          </a>
-          <div class="card-body">
-            <p class="card-text fw-bold">Abrigo Celeste</p>
-            <small class="text-secondary"> ARS $3000 </small>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card mb-5 shadow-sm">
+            <img src="../imgs/blog/img3.jpg" alt="" class="img-fluid" />
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+              </div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Magnam, eos deserunt officia totam similique obcaecati et odio
+                  voluptates distinctio, consequuntur delectus harum explicabo
+                  laborum illum minima porro expedita tempore dolor...
+                </p>
+              </div>
+              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+            </div>
           </div>
         </div>
-        <div class="card m-2" style="width: 15rem">
-          <a href="paginas/producto.html">
-            <img
-              src="imgs/ropa/img4.jpg"
-              alt=""
-              class="card-img-top"
-              height="300"
-              alt="Producto"
-            />
-          </a>
-          <div class="card-body">
-            <p class="card-text fw-bold">Abrigo Elegante</p>
-            <small class="text-secondary"> ARS $3500 </small>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card mb-5 shadow-sm">
+            <img src="../imgs/blog/img4.jpg" alt="" class="img-fluid" />
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+              </div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Magnam, eos deserunt officia totam similique obcaecati et odio
+                  voluptates distinctio, consequuntur delectus harum explicabo
+                  laborum illum minima porro expedita tempore dolor...
+                </p>
+              </div>
+              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+            </div>
           </div>
         </div>
-      </div>
-      <a href="paginas/listaDeProductos.html" class="btn btn-outline-dark my-5">
-        Ver Todos los Productos
-      </a>
-      <div
-        class="d-flex justify-content-between align-items-center flex-column flex-lg-row my-5"
-      >
-        <div class="position-relative m-2">
-          <img src="imgs/menu/img1.jpg" height="300" alt="Ropa Informal" />
-          <a
-            href="#"
-            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
-            >Ropa Informal</a
-          >
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card mb-5 shadow-sm">
+            <img src="../imgs/blog/img5.jpg" alt="" class="img-fluid" />
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+              </div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Magnam, eos deserunt officia totam similique obcaecati et odio
+                  voluptates distinctio, consequuntur delectus harum explicabo
+                  laborum illum minima porro expedita tempore dolor...
+                </p>
+              </div>
+              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+            </div>
+          </div>
         </div>
-        <div class="position-relative m-2">
-          <img src="imgs/menu/img2.jpg" height="300" alt="Ropa Informal" />
-          <a
-            href="#"
-            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
-            >Camisas</a
-          >
-        </div>
-        <div class="position-relative m-2">
-          <img src="imgs/menu/img3.jpg" height="300" alt="Ropa Informal" />
-          <a
-            href="#"
-            class="btn btn-light position-absolute start-0 bottom-0 ms-2 mb-2 d-block"
-            >Carteras</a
-          >
-        </div>
-      </div>
-      <div class="row text-start align-items-center gy-5 my-5">
-        <div class="col-12 col-md-6">
-          <img src="imgs/sobre/img1.jpg" alt="" class="w-100 h-100" />
-        </div>
-        <div class="col-12 col-md-6">
-          <div>
-            <h2 class="display-4">Las Mejores Marcas</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto aspernatur atque exercitationem iusto ad repudiandae
-              iure asperiores dicta. Sunt quo dolorem doloremque, saepe
-              molestiae quasi quos, reiciendis nemo maxime, dolore eos eum
-              assumenda aliquam distinctio natus laudantium magni ex sapiente.
-            </p>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card mb-5 shadow-sm">
+            <img src="../imgs/blog/img6.jpg" alt="" class="img-fluid" />
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+              </div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Magnam, eos deserunt officia totam similique obcaecati et odio
+                  voluptates distinctio, consequuntur delectus harum explicabo
+                  laborum illum minima porro expedita tempore dolor...
+                </p>
+              </div>
+              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row text-start align-items-center gy-5 my-5">
-        <div class="col-12 col-md-6">
-          <div>
-            <h2 class="display-4">Calidad</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto aspernatur atque exercitationem iusto ad repudiandae
-              iure asperiores dicta. Sunt quo dolorem doloremque, saepe
-              molestiae quasi quos, reiciendis nemo maxime, dolore eos eum
-              assumenda aliquam distinctio natus laudantium magni ex sapiente.
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6">
-          <img src="imgs/sobre/img2.jpg" alt="" class="w-100 h-100" />
-        </div>
-      </div>
+      <!-- Seccion newsletter -->
       <section class="my-5 mx-auto py-5" style="max-width: 25rem">
         <h2>¡Suscribite a nuestro newsletter!</h2>
         <form action="" class="d-flex my-4">
@@ -306,6 +289,6 @@
     </div>
 
     <!-- Script de Bootstrap -->
-    <script src="js/bootstrap.js"></script>
+    <script src="../js/bootstrap.js"></script>
   </body>
 </html>
