--- a/paginas/listaDeProductos.html
+++ b/paginas/listaDeProductos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/custom.css" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
-    <title>Moda Store</title>
+    <title>Moda Store | Lista de Productos</title>
   </head>
   <body>
     <header>
@@ -73,7 +73,7 @@
                   <a href="#" class="nav-link">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Blog</a>
+                  <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="#" class="nav-link">Contacto</a>
