--- a/paginas/producto.html
+++ b/paginas/producto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/custom.css" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
-    <title>Moda Store</title>
+    <title>Moda Store | Producto</title>
   </head>
   <body>
     <header>
@@ -73,7 +73,7 @@
                   <a href="#" class="nav-link">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Blog</a>
+                  <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="#" class="nav-link">Contacto</a>
@@ -241,7 +241,7 @@
       <div
         class="d-flex justify-content-between align-items-center flex-column flex-lg-row"
       >
-        <div class="card m-2">
+        <div class="card m-2" style="width: 15rem">
           <a href="">
             <img
               src="../imgs/ropa/img1.jpg"
@@ -255,7 +255,7 @@
             <small class="text-secondary"> ARS $2500 </small>
           </div>
         </div>
-        <div class="card m-2">
+        <div class="card m-2" style="width: 15rem">
           <a href="">
             <img
               src="../imgs/ropa/img2.jpg"
@@ -269,7 +269,7 @@
             <small class="text-secondary"> ARS $1000 </small>
           </div>
         </div>
-        <div class="card m-2">
+        <div class="card m-2" style="width: 15rem">
           <a href="">
             <img
               src="../imgs/ropa/img3.jpg"
@@ -283,7 +283,7 @@
             <small class="text-secondary"> ARS $3000 </small>
           </div>
         </div>
-        <div class="card m-2">
+        <div class="card m-2" style="width: 15rem">
           <a href="">
             <img
               src="../imgs/ropa/img4.jpg"
