creacion pagina contacto

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/custom.css" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
-    <title>Moda Store | Lista de Productos</title>
+    <title>Moda Store | Contacto</title>
   </head>
   <body>
     <header>
@@ -76,7 +76,7 @@
                   <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="contacto.html" class="nav-link">Contacto</a>
+                  <a href="#" class="nav-link">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -84,185 +84,55 @@
         </div>
       </nav>
     </header>
-    <div class="container position-relative text-center">
-      <div class="position-relative text-center text-white mb-5">
-        <img src="../imgs/banner2.jpg" alt="Banner" class="w-100" />
-        <div
-          class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
-        >
-          <h1 class="display-4">Nuevos Ingresos</h1>
-        </div>
+    <div class="container">
+      <div class="text-center my-5">
+        <h1>Contacto</h1>
+        <hr />
       </div>
-      <div class="row">
-        <div class="col col-lg-3 text-start">
-          <h3>Ropa</h3>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Noche</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Verano</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Vestidos</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Remeras</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Blusas y Camisas</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Sweaters</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Pantalones</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Camperas</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Abrigos</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col col-9 d-flex flex-wrap justify-content-between">
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img1.jpg"
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Vestido Azul</p>
-              <small class="text-secondary">ARS $2500</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img2.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Remera Lisa</p>
-              <small class="text-secondary">ARS $1000</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img3.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Abrigo Celeste</p>
-              <small class="text-secondary">ARS $3000</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img4.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Abrigo Elegante</p>
-              <small class="text-secondary">ARS $3500</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img5.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Sweater Amarillo</p>
-              <small class="text-secondary">ARS $3500</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img6.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Blusa Verde</p>
-              <small class="text-secondary">ARS $1500</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img7.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Jean Gastado</p>
-              <small class="text-secondary">ARS $2300</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img8.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Abrigo Elegante Corto</p>
-              <small class="text-secondary">ARS $3200</small>
-            </div>
-          </div>
-          <div class="card m-2" style="width: 15rem">
-            <a href="producto.html">
-              <img
-                src="../imgs/ropa/img9.jpg"
-                alt=""
-                class="card-img-top"
-                height="300"
-                alt="Producto"
-              />
-            </a>
-            <div class="card-body">
-              <p class="card-text fw-bold">Blusa Rosa</p>
-              <small class="text-secondary">ARS $1300</small>
-            </div>
+      <form action="">
+        <div class="input-group mb-3">
+          <span class="input-group-text"
+            ><i class="bi bi-person-fill"></i
+          ></span>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="nombre"
+              placeholder="Nombre"
+            />
+            <label for="nombre">Nombre</label>
           </div>
         </div>
-      </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text"
+            ><i class="bi bi-envelope-fill"></i
+          ></span>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="email"
+              placeholder="Email"
+            />
+            <label for="email">Email</label>
+          </div>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text"
+            ><i class="bi bi-chat-left-fill"></i
+          ></span>
+          <textarea
+            class="form-control"
+            name="mensaje"
+            id="mensaje"
+            placeholder="Deje su mensaje aqui"
+            style="height: 100px"
+          ></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-outline-dark">Enviar</button>
+      </form>
       <!-- Seccion newsletter -->
       <section class="my-5 mx-auto py-5" style="max-width: 25rem">
         <h2>¡Suscribite a nuestro newsletter!</h2>
