--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <a href="paginas/blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Contacto</a>
+                  <a href="paginas/contacto.html" class="nav-link">Contacto</a>
                 </li>
               </ul>
             </div>
