--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -76,7 +76,7 @@
                   <a href="#" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Contacto</a>
+                  <a href="contacto.html" class="nav-link">Contacto</a>
                 </li>
               </ul>
             </div>
