--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -130,8 +130,52 @@
             style="height: 100px"
           ></textarea>
         </div>
+        <button
+          type="button"
+          class="btn btn-outline-dark"
+          data-bs-toggle="modal"
+          data-bs-target="#modal"
+        >
+          Enviar
+        </button>
 
-        <button type="submit" class="btn btn-outline-dark">Enviar</button>
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="modal"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">
+                  ¡Su mensaje a sido enviado!
+                </h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                Muchas gracias por su mensaje. Nos pondremos en contacto a la
+                brevedad.
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cerrar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </form>
       <!-- Seccion newsletter -->
       <section class="my-5 mx-auto py-5" style="max-width: 25rem">
